...
        android:background="@drawable/logo_background"
        android:src="@drawable/homiez_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/editUserID"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_above="@id/editPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_inputbox"
        android:hint="User ID"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textColor="@color/colorGrey"
...
        android:textSize="28dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_above="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_inputbox"
        android:hint="Password"
        android:paddingLeft="20dp"
        android:password="true"
...
