<resources>
    <string name="app_name">Homiez</string>
    <string name="looking_for_room">Looking For Room</string>
    <string name="posting_room">Posting Room</string>
    <string name="homiez_logo">homiez_logo</string>
    <string name="match">Match</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="login">Login</string>
    <string name="user_id_prompt">Enter User ID:</string>
    <string name="matches">Your Matches</string>
    <string name="posting_matches">Posting Matches</string>
    <string name="profile_matches">Profile Matches</string>
    <string name="postings">Postings</string>
    <string name="your_postings">Your Postings</string>
    <string name="request">Request</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="requests">Requests</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="Title">Title</string>
    <string name="user">User</string>
    <string name="create_profile">Create Profile</string>
    <string name="user_prompt">UserID:</string>
    <string name="budget_prompt">Budget (Monthly):</string>
    <string name="age_prompt">Age:</string>
    <string name="date_prompt">Pick a date</string>
    <string name="gender_prompt">Gender:</string>
    <string name ="email_prompt">Email:</string>
    <string name ="phone_prompt">Phone Number:</string>
    <string name ="biography_prompt">Biography:</string>
    <string name ="interest_prompt">Interests:</string>
    <string name ="create">Create</string>
    <string name="signup">Sign Up</string>
    <string name ="name_prompt">Name:</string>
    <string name="interest_hint">Separate by commas</string>
    <string name="posting_prompt">Postings:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customize">Customize</string>
    <string name="submit">Submit Changes</string>
    <string name="send_request">Send Request</string>
    <string name="view_profile">View Profile</string>
    <string name="tenants">Other Tenants</string>
    <string name="password_prompt">Password:</string>
    <string name="contact_prompt">Contact Info:</string>
</resources>
