...
        android:layout_weight="1"
        android:choiceMode="none">

    </ListView>

    <Button
        android:id="@+id/button_matches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matches" />

    <Button
        android:id="@+id/button_requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requests" />
</LinearLayout>
